# crimelens-ai

./: .gitignore  README.md
apps/dashboard/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
apps/dashboard/src/: middleware.ts
apps/dashboard/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
apps/dashboard/src/hooks/: use-api.ts
apps/dashboard/src/lib/: api.ts  utils.ts
apps/dashboard/src/types/: index.ts
apps/mobile/: .env.example  app.json  eas.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/mobile/app/: _layout.tsx
apps/mobile/app/(auth)/: _layout.tsx  login.tsx  signup.tsx
apps/mobile/app/(tabs)/: _layout.tsx  history.tsx  index.tsx  profile.tsx  report.tsx
apps/mobile/app/incident/: [id].tsx
apps/mobile/src/: constants.ts
backend/: .dockerignore  .env.example  Dockerfile  get_token.py  nixpacks.toml  pyproject.toml  requirements.txt  seed_incidents.py  uvicorn.err
backend/api/: config.py  database.py  dependencies.py  main.py
backend/api/models/: hotspot.py  risk_score.py
backend/api/routers/: auth.py  classify.py  dashboard.py  health.py  hotspots.py  incidents.py  risk_scores.py  routes.py
backend/api/services/: classifier.py  hotspot_detector.py  prompts.py  risk_engine.py  route_planner.py  storage.py
backend/api/utils/: pagination.py  rate_limiter.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt
backend/tests/: conftest.py  test_classify.py  test_hotspots.py  test_incidents.py  test_risk_engine.py
(+48 files in other folders)
